# codewars-kata

./: .flake8  .justfile  Break camelCase.py  README  README.md  Stop_gninnipS_My_sdroW!.py  array_diff.py  descending_sort_int.py  digital_root.py  floating_point_comparison.py  jaden_case.py  justfile  mumbling.py  pyproject.toml  spin_words.py  sum_without_highest_and_lowest_numbers.py
4 kyu/: longest_intersecting_range.py
5 kyu/: Pete the baker.py  url_parse.py
6kyu/: create_phone_number.py  roman_numerals_algorithm.py
6kyu/alphabet_index/: README.md  solution.py  test_solution.py
6kyu/bit_counting/: README.md  solution.py
6kyu/counting_duplicates/: README.md  solution.py  test_solution.py
6kyu/find_odd_one/: README.md  solution.py  test_solution.py
6kyu/multiples_3_or_5/: README.md  solution.py  test_solution.py
6kyu/wholikesit/: README.md  solution.py  test_solution.py
7kyu/: friend_or_foe.py  min_max.py  string_ends_with.py
7kyu/isograms/: README.md  test_solution.py
7kyu/mumbling/: README.md  solution.py  test_solution.py
7kyu/shortest_word/: README.md  solution.py  test_solution.py
7kyu/sum_of_numbers/: README.md  solution.py  test_solution.py
8kyu/: beginner_series_#2_clock.py  check_same_case.py  gravity_flip.py  quarter_of_the_year.py
8kyu/bool_to_string/: solution.py  test_solution.py
8kyu/dna_to_rna/: README.md  solution.py  test_solution.py
8kyu/find_smallest_int/: solution.py  test_solution.py
8kyu/python/: beginner_series_#2_clock.py  gravity_flip.py
utils/: problem_folder_creator.py
(+22 files in other folders)
